Add API to create reload listeners with a registry lookup. (#3927)
* Add API to create reload listeners with a registry lookup.

* Document this is only for server data

* Review feedback